--- a/train.ipynb
+++ b/train.ipynb
@@ -42,9 +42,13 @@
    "outputs": [],
    "source": [
     "!python3 yolov5/train.py \\\n",
-    "    --data Real-Data-13/data.yaml \\\n",
+    "    --data <path_to_data_yaml> \\\n",
     "    --cfg models/yolov5_fpn.yaml \\\n",
-    "    --img 640 --batch-size -1 --epochs 300 --seed 42 --name yolov5+fpnHead"
+    "    --img 640 \\\n",
+    "    --batch-size -1 \\\n",
+    "    --epochs 300 \\\n",
+    "    --seed 42 \\\n",
+    "    --name <experiment_name>"
    ]
   },
   {
@@ -52,7 +56,7 @@
    "metadata": {},
    "source": [
     "### training\n",
-    "##### without yolov5 repo"
+    "##### with ultralytics"
    ]
   },
   {
@@ -65,12 +69,12 @@
     "\n",
     "# load model\n",
     "# model = YOLO(\"yolov5S.pt\")  # load pretrained model\n",
-    "model = YOLO('models/yolov5_fpn.yaml').load('yolov5s.pt')  # build from YAML and transfer weights\n",
     "# model = YOLO(\"models/yolov5_fpn.yaml\")  # train model from scratch\n",
+    "model = YOLO('models/yolo5_fpn_ultralytics.yaml').load('yolov5s.pt')  # build from YAML and transfer weights\n",
     "\n",
     "\n",
     "model.train(\n",
-    "    data=\"/home/alluvium/Masood/Real-Data-13/data.yaml\",\n",
+    "    data=\"path_to_data_yaml\",\n",
     "    seed = 42,\n",
     "    epochs=300,\n",
     "    imgsz=1024,\n",
