--- a/train.ipynb
+++ b/train.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "from ultralytics import YOLO\n",
     "\n",
-    "# load model\n",
+    "# load a model\n",
     "# model = YOLO(\"yolov5S.pt\")  # load pretrained model\n",
     "# model = YOLO(\"models/yolov5_fpn.yaml\")  # train model from scratch\n",
     "model = YOLO('models/yolo5_fpn_ultralytics.yaml').load('yolov5s.pt')  # build from YAML and transfer weights\n",
